# goggles-ai

./: .gitignore  LICENSE  README.md  announcement.md  plan.md  pyproject.toml
agentshield/: __init__.py  api_server.py  cli.py  models.py  scanner.py
agentshield/detectors/: __init__.py  cloaking.py  css_hidden_text.py  html_injection.py  image_triage.py  unicode_stego.py
agentshield/middleware/: __init__.py  langchain.py  mcp_server.py  playwright_hook.py
agentshield/sanitizers/: __init__.py  html_sanitizer.py  image_sanitizer.py  text_sanitizer.py
agentshield/utils/: __init__.py
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css  types.ts
dashboard/src/components/: SeverityBadge.tsx  ThreatCard.tsx
dashboard/src/views/: AboutView.tsx  HistoryView.tsx  ScanView.tsx  (+1 more)
eval/: benchmark.py  eval_runner.py  generate_tables.py
eval/generators/: gen_cloaking_server.py  gen_css_attacks.py  gen_image_attacks.py  gen_unicode_attacks.py
goggles_ai/: __init__.py  api_server.py  cli.py  scanner.py
goggles_ai/detectors/: __init__.py  cloaking.py  css_hidden_text.py  html_injection.py  image_triage.py  stego_deep.py  unicode_stego.py
goggles_ai/middleware/: langchain.py  mcp_server.py  playwright_hook.py
goggles_ai/sanitizers/: html_sanitizer.py  text_sanitizer.py
goggles_ai/utils/: entropy.py  unicode_confusables.py
tests/: test_cloaking.py  test_css_hidden_text.py  test_html_injection.py  test_image_triage.py  test_sanitizers.py  test_scan_url.py  test_scanner_integration.py  test_unicode_stego.py
